# Sovereign-Mohawk-Proto

./: **MILESTONE_PROOF.md  .gitignore  .jscpd.json  .ops-assistant-compose-fix.yml  .pre-commit-config.yaml  00_TEST_EXECUTION_START_HERE.md  200_Node_TEST.md  ACADEMIC_PAPER.md  ACTION_ITEMS_TRACKER.md  AUDITOR_QUICK_REFERENCE.md  AUTH_LAYER_IMPLEMENTATION_GUIDE.md  BLOG_POST_FORMAL_PROOFS.md  BRANCH_COMMIT_PUSH_COMPLETE.md  BYZANTINE_ATTACK_SECURITY_REPORT.md  CERTIK_AUDIT_SUMMARY.md  CHANGELOG.md  CHECK_ENVIRONMENT.bat  CITATION.cff  CI_FAILURE_FIXES_OVERVIEW.txt  CI_FAILURE_FIX_COMPLETE.md  CI_FIXES_SUMMARY.md  CI_WORKFLOW_COMPATIBILITY_REPORT.md  CODE_OF_CONDUCT.md  COMMIT_AND_PUSH_COMPLETE.txt  COMMIT_MSG_PR1.txt  COMMIT_MSG_PR3.txt  COMPLETE_CONFIRMATION.md  COMPLETE_FORMAL_VERIFICATION_COVERAGE.md  COMPLETE_TEST_SUITE_INDEX.md  COMPLETE_TEST_SUMMARY.md  COMPLIANCE.md  COMPLIANCE_MAPPING.md  COMPOSE_TEST_RESULTS.md  COMPREHENSIVE_REVIEW_SUMMARY.md  COMPREHENSIVE_STRESS_FUNCTION_TEST_REPORT.md  COMPREHENSIVE_TEST_DETAILS.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  CONFORMITY_ASSESSMENT_AND_CE_PATH.md  CONTRIBUTING.md  CONTRIBUTORS.md  (+313 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_COMPLETE.md  SECURITY.md  dependabot.yml
LeanFormalization/: Theorem1BFT.lean  Theorem3Communication.lean  Theorem4Liveness.lean
captured_artifacts/: 1500_edge_2026-04-13.jsonl  1500_safe_2026-04-13.jsonl  README.md  artifact_evidence_summary.md  artifact_manifest_latest.json  bridge_compression_benchmark_compare.md  bridge_compression_speedup_trend_2026-04-13.md  distributed_10k_router_bridge_async_evaluation_2026-04-13.md  extended_stress_200cycle_2026-04-13.md  extended_stress_analysis_2026-04-13.json  fedavg_10k_node_runtime_evaluation_2026-04-13.md  fedavg_benchmark_compare.md  fedavg_scaling_enhancement_plan_2026-04-13.md  fedavg_scaling_phase1_implementation_2026-04-13.md  ga_release_readiness_2026-04-17.md  loaded_1500node_stress_capture_2026-04-13.md  performance_improvement_report.md  release_package_manifest_checksums_2026-04-17.txt  release_performance_evidence.md  router_metrics_extended_10k_fedavg_analysis_2026-04-13.json  router_metrics_extended_10k_fedavg_analysis_2026-04-13.md  router_metrics_post_extended_10k_fedavg_2026-04-13.prom  router_metrics_post_extended_200cycle_2026-04-13.prom  router_metrics_post_stress_2026-04-13.prom  router_metrics_pre_extended_10k_fedavg_2026-04-13.prom  router_metrics_pre_extended_200cycle_2026-04-13.prom  router_metrics_pre_stress_2026-04-13.prom  runtime_validation_capture_2026-04-13.md  scaled_swarm_benchmark_report_1500_2026-04-13.md  session_manifest.json  stress_enhancement_summary_2026-04-13.md  stress_metrics_capture_10m.md  tpm_attestation_benchmark_commit_record.json  tpm_attestation_verification_commit_record.json  tpm_batch_stress_test_commit_record.json  tpm_gated_fl_pipeline_commit_record.json  tpm_session_summary_commit_record.json  v2_dashboard_validation_report.md
certs/: ca.crt  ca.key  node-.crt  node-.key  node-2.crt  node-2.key  node-3.crt  node-3.key  orchestrator.crt  orchestrator.key
chaos-reports/: orchestrator-baseline.json  orchestrator-failure.json  orchestrator-summary.json  tpm-metrics-failure.json  tpm-metrics-recovery.json  tpm-metrics-summary.json
docs/: ADOPTION_ACCELERATION_PLAN.md  API_REFERENCE.md  ARCHITECTURE.md  ARTIFACT_GOVERNANCE.md  BENCHMARKS_AND_REPRODUCIBILITY.md  CONTRIBUTING_LEAN_PROOFS.md  CROSS_VERTICAL_FEDERATED_ROUTER.md  DEPLOYMENT.md  DoD_Alignment_Addendum.md  FEDERATED_RUNBOOK.md  FORMAL_VERIFICATION_GUIDE.md  GETTING_STARTED.md  INDEX.md  NEXT_IMPROVEMENTS_ROADMAP.md  NEXT_IMPROVEMENTS_SUMMARY.md  OPERATIONS.md  PHASE_4_PRODUCTION_DEPLOYMENT.md  README.md  ROOT_DOC_RELOCATION_PLAN.md  SECURITY.md  SECURITY_REMEDIATION_PLAN.md  SYNTHESIZE_BIO_DEMO_PLAN.md  VERIFICATION_METHODS_AND_CORRECTNESS_IMPROVEMENTS.md  flower-integration.md
grafana/: README.md  byzantine-detection.json  node-health-overview.json  tokenomics-flow.json
internal/: aggregator.go  aggregator_multikrum_test.go  batch_verifier.go  convergence.go  dp_config.go  multikrum.go  multikrum_test.go  p1_test.go  phases_test.go  rdp_accountant.go  simple_test.go  straggler_resilience.go  stragglers.md  streaming_aggregator.go  streaming_aggregator_test.go  zksnark_verifier.go
monitoring/: prometheus.yml:
proofs/: FORMALIZATION_TEST_COMPLETE.md  FORMAL_TRACEABILITY_MATRIX.md  FORMAL_VERIFICATION_GUIDE.md  FULL_FORMALIZATION_VALIDATION_REPORT.md  HUMAN_READABLE_PROOFS.md  LeanFormalization.lean  MACHINE_VERIFICATION_REPORT.md  MATHLIB_ENHANCEMENT_GUIDE.md  Mathlib.lean  README.md  Refinement.lean  Specification.lean  THINKER_CLAUSES_CAPABILITIES.md  VERIFICATION_LOG.md  audit_verification.md  bft_resilience.md  communication.md  convergence.md  cryptography.md  differential_privacy.md  lake-manifest.json  lakefile.lean  (+7 more)
sdk/python/: .gitignore  README.md  pyproject.toml  setup.py
sdk/python/examples/: basic_usage.py  federated_learning_demo.py  federated_learning_hybrid_verification_tutorial.ipynb  flower_mohawk_demo.py  multi_silo_router_workflow.py  pqc_migration_demo.py  router_silo_pubsub_demo.py  wasm_hot_reload_async_demo.py  wasm_hot_reload_demo.py
sdk/python/examples/flower_integrated/: __init__.py  common.py  huggingface.py  llm_fine_tune.py  local_simulator.py  quickstart_pytorch.py
sdk/python/mohawk/: __init__.py  accelerator.py  async_client.py  bridge.py  client.py  credentials.py  exceptions.py  flower.py  flower_client.py  flower_strategy.py  gradient.py  high_level.py  tls.py
sdk/python/tests/: test_benchmarks.py  test_byzantine_attacks_advanced.py  test_client.py  test_comprehensive_stress_function.py  test_dataloader_optimization.py  test_flower_client.py  test_flower_examples.py  test_flower_strategy.py  test_formal_verification_validation.py  test_full_expansion_e2e.py  test_llm_training_performance.py  test_phase1_coverage_expansion.py  test_security_phase1.py  test_theorem7_8_pqc_security.py
wasm-modules/fl_task/: Cargo.toml
wasm-modules/fl_task/src/: lib.rs
(+692 files in other folders)
