[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-mohawk"
version = "2.0.0a2"
authors = [
    {name = "rwilliamspbg-ops", email = "ryan@mohawk-protocol.io"}
]
description = "Python SDK for Sovereign-Mohawk federated learning protocol"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["federated-learning", "zk-snark", "blockchain", "privacy", "ai"]

[project.optional-dependencies]
accelerator = [
    "numpy>=1.22",
]
torch = [
    "numpy>=1.22",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/rwilliamspbg-ops/Sovereign-Mohawk-Proto"
Repository = "https://github.com/rwilliamspbg-ops/Sovereign-Mohawk-Proto"
Documentation = "https://github.com/rwilliamspbg-ops/Sovereign-Mohawk-Proto/tree/main/sdk/python"
Issues = "https://github.com/rwilliamspbg-ops/Sovereign-Mohawk-Proto/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
